src-tauri/err.txt
    Checking tauri-app v0.1.0 (C:\Users\razer\Documents\Codebase\Trubleshooter\src-tauri)
warning: use of deprecated type alias `etherparse::IpHeader`: `IpHeader` was renamed to `NetHeaders`
 --> src\modules\pcap_analysis.rs:5:33
  |
5 | use etherparse::{PacketHeaders, IpHeader, TransportHeader, TcpHeader};
  |                                 ^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `etherparse::IpHeader`: `IpHeader` was renamed to `NetHeaders`
  --> src\modules\pcap_analysis.rs:74:41
   |
74 | ...                   IpHeader::Ipv4(ipv4, _) => {
   |                       ^^^^^^^^

warning: use of deprecated type alias `etherparse::IpHeader`: `IpHeader` was renamed to `NetHeaders`
  --> src\modules\pcap_analysis.rs:84:41
   |
84 | ...                   IpHeader::Ipv6(ipv6, _) => {
   |                       ^^^^^^^^

error[E0609]: no field `ip` on type `PacketHeaders<'_>`
  --> src\modules\pcap_analysis.rs:72:63
   |
72 | ...                   if let Some(ref ip) = headers.ip {
   |                                                     ^^ unknown field
   |
   = note: available fields are: `link`, `link_exts`, `net`, `transport`, `payload`

For more information about this error, try `rustc --explain E0609`.
warning: `tauri-app` (lib) generated 3 warnings
error: could not compile `tauri-app` (lib) due to 1 previous error; 3 warnings emitted
